--- a/src/Makefile.linux
+++ b/src/Makefile.linux
@@ -1,5 +1,6 @@
 PLAT =  platf-unix
-OBJECTS = activi.o dasave.o dbread.o fsol.o gcalc.o gmini.o hprogs.o prinin.o prtcal.o help.o $(PLAT).o
+#OBJECTS = activi.o dasave.o dbread.o fsol.o gcalc.o gmini.o hprogs.o prinin.o prtcal.o help.o $(PLAT).o
+#         activi.o dasave.o dbread.o fsol.o gcalc.o hprogs.o help.o $(PLAT).o
 COMP90 = gfortran -O2
 
 ##COMP90 = gfortran -O2 -fbounds-check -Wunused
@@ -8,192 +9,243 @@ COMP90 = gfortran -O2
 COMP77 = gfortran -O2
 SEX = f90
 
-activi.o : activi.$(SEX) theriak.cmn files.cmn
-	 $(COMP90) -c activi.$(SEX)
-    
-dasave.o : dasave.$(SEX) theriak.cmn
-	$(COMP90) -c dasave.$(SEX)
-    
-dbread.o : dbread.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c dbread.$(SEX)
-    
-fsol.o : fsol.$(SEX)
-	$(COMP90) -c fsol.$(SEX)
-    
-gcalc.o : gcalc.$(SEX) theriak.cmn
-	$(COMP90) -c gcalc.$(SEX)
+BIN_DIR= ../bin
+BUILD_DIR= ../default-build
 
-gmini.o : gmini.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c gmini.$(SEX)
+OBJECTS = \
+$(BUILD_DIR)/activi.o \
+$(BUILD_DIR)/dasave.o \
+$(BUILD_DIR)/dbread.o \
+$(BUILD_DIR)/fsol.o \
+$(BUILD_DIR)/gcalc.o \
+$(BUILD_DIR)/gmini.o \
+$(BUILD_DIR)/hprogs.o \
+$(BUILD_DIR)/prinin.o \
+$(BUILD_DIR)/prtcal.o \
+$(BUILD_DIR)/help.o \
+$(BUILD_DIR)/$(PLAT).o
 
-hprogs.o : hprogs.$(SEX)
-	$(COMP90) -c hprogs.$(SEX)
+THERMO_OBJECTS = \
+$(BUILD_DIR)/activi.o \
+$(BUILD_DIR)/dasave.o \
+$(BUILD_DIR)/dbread.o \
+$(BUILD_DIR)/fsol.o \
+$(BUILD_DIR)/gcalc.o \
+$(BUILD_DIR)/hprogs.o \
+$(BUILD_DIR)/help.o \
+$(BUILD_DIR)/$(PLAT).o
 
-prinin.o : prinin.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c prinin.$(SEX)
+#activi.o dasave.o dbread.o fsol.o gcalc.o hprogs.o help.o $(PLAT).o
 
-prtcal.o : prtcal.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c prtcal.$(SEX)
+$(BUILD_DIR)/activi.o : activi.$(SEX) theriak.cmn files.cmn
+	 $(COMP90) -c activi.$(SEX) -o $@
 
-help.o : help.$(SEX) files.cmn thblock.cmn
-	$(COMP90) -c help.$(SEX)
+$(BUILD_DIR)/dasave.o : dasave.$(SEX) theriak.cmn
+	$(COMP90) -c dasave.$(SEX) -o $@
 
-$(PLAT).o : $(PLAT).$(SEX)
-	$(COMP90) -c $(PLAT).$(SEX)
+$(BUILD_DIR)/dbread.o : dbread.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c dbread.$(SEX) -o $@
 
-theriak.o : theriak.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c theriak.$(SEX)
+$(BUILD_DIR)/fsol.o : fsol.$(SEX)
+	$(COMP90) -c fsol.$(SEX) -o $@
 
-theriak : theriak.o $(OBJECTS)
-	$(COMP90) -o theriak theriak.o $(OBJECTS)
+$(BUILD_DIR)/gcalc.o : gcalc.$(SEX) theriak.cmn
+	$(COMP90) -c gcalc.$(SEX) -o $@
 
-theriakd.o : theriakd.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c theriakd.$(SEX)
+$(BUILD_DIR)/gmini.o : gmini.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c gmini.$(SEX) -o $@
 
-theriakd : theriakd.o $(OBJECTS)
-	$(COMP90) -o theriakd theriakd.o $(OBJECTS)
+$(BUILD_DIR)/hprogs.o : hprogs.$(SEX)
+	$(COMP90) -c hprogs.$(SEX) -o $@
 
-domino.o : domino.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c domino.$(SEX)
+$(BUILD_DIR)/prinin.o : prinin.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c prinin.$(SEX) -o $@
 
-domino : domino.o $(OBJECTS)
-	$(COMP90) -o domino domino.o $(OBJECTS)
+$(BUILD_DIR)/prtcal.o : prtcal.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c prtcal.$(SEX) -o $@
 
-guzzler.o : guzzler.$(SEX)
-	$(COMP90) -c guzzler.$(SEX)
+$(BUILD_DIR)/help.o : help.$(SEX) files.cmn thblock.cmn
+	$(COMP90) -c help.$(SEX) -o $@
 
-guzzler : guzzler.o $(PLAT).o
-	$(COMP90) -o guzzler guzzler.o $(PLAT).o
+$(BUILD_DIR)/$(PLAT).o : $(PLAT).$(SEX)
+	$(COMP90) -c $(PLAT).$(SEX) -o $@
 
-explot.o : explot.$(SEX) expl.cmn
-	$(COMP90) -c explot.$(SEX)
+$(BUILD_DIR)/theriak.o : theriak.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c theriak.$(SEX) -o $@
 
-explot : explot.o $(PLAT).o
-	$(COMP90) -o explot explot.o $(PLAT).o
+$(BIN_DIR)/theriak : $(BUILD_DIR)/theriak.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/theriak.o $(OBJECTS)
+#$<
+#$(BUILD_DIR)/theriak.o $(OBJECTS)
 
-therbin.o : therbin.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c therbin.$(SEX)
+$(BUILD_DIR)/theriakd.o : theriakd.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c theriakd.$(SEX) -o $@
 
-therbin : therbin.o $(OBJECTS)
-	$(COMP90) -o therbin therbin.o $(OBJECTS)
+$(BIN_DIR)/theriakd : $(BUILD_DIR)/theriakd.o $(OBJECTS)
+	$(COMP90) -o theriakd -o $@ $(BUILD_DIR)/theriakd.o $(OBJECTS)
 
-therbinc.o : therbinc.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c therbinc.$(SEX)
+$(BUILD_DIR)/domino.o : domino.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c domino.$(SEX) -o $@
 
-therbinc : therbinc.o $(OBJECTS)
-	$(COMP90) -o therbinc therbinc.o $(OBJECTS)
+$(BIN_DIR)/domino : $(BUILD_DIR)/domino.o $(OBJECTS)
+	$(COMP90)  -o $@ $(BUILD_DIR)/domino.o $(OBJECTS)
 
-therter.o : therter.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c therter.$(SEX)
+$(BUILD_DIR)/dguzzler.o : guzzler.$(SEX)
+	$(COMP90) -c guzzler.$(SEX) -o $@
 
-therter : therter.o $(OBJECTS)
-	$(COMP90) -o therter therter.o $(OBJECTS)
+$(BIN_DIR)/guzzler : $(BUILD_DIR)/dguzzler.o $(BUILD_DIR)/$(PLAT).o
+	$(COMP90) -o $@ $(BUILD_DIR)/dguzzler.o $(BUILD_DIR)/$(PLAT).o
 
-thermo.o : thermo.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c thermo.$(SEX)
+$(BUILD_DIR)/explot.o : explot.$(SEX) expl.cmn
+	$(COMP90) -c explot.$(SEX) -o $@
 
-thermo : thermo.o activi.o dasave.o dbread.o fsol.o gcalc.o hprogs.o help.o $(PLAT).o
-	$(COMP90) -o thermo thermo.o activi.o dasave.o dbread.o fsol.o gcalc.o hprogs.o help.o $(PLAT).o
-    
-thalia.o : thalia.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c thalia.$(SEX)
+$(BIN_DIR)/explot : $(BUILD_DIR)/explot.o $(BUILD_DIR)/$(PLAT).o
+	$(COMP90) -o $@ $(BUILD_DIR)/explot.o $(BUILD_DIR)/$(PLAT).o
 
-thalia : thalia.o activi.o dasave.o dbread.o fsol.o gcalc.o hprogs.o help.o $(PLAT).o
-	$(COMP90) -o thalia thalia.o activi.o dasave.o dbread.o fsol.o gcalc.o hprogs.o help.o $(PLAT).o
+$(BUILD_DIR)/therbin.o : therbin.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c therbin.$(SEX) -o $@
 
-theriaq.o : theriaq.$(SEX) theriak.cmn files.cmn aqua.cmn
-	$(COMP90) -c theriaq.$(SEX)
+$(BIN_DIR)/therbin : $(BUILD_DIR)/therbin.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/therbin.o $(OBJECTS)
 
-theriaq : theriaq.o $(OBJECTS)
-	$(COMP90) -o theriaq theriaq.o $(OBJECTS)
+$(BUILD_DIR)/therbinc.o : therbinc.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c therbinc.$(SEX) -o $@
 
-therieq3.o : therieq3.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c therieq3.$(SEX)
+$(BIN_DIR)/therbinc : $(BUILD_DIR)/therbinc.o $(OBJECTS)
+	$(COMP90) -o $@ therbinc.o $(OBJECTS)
 
-therieq3 : therieq3.o $(OBJECTS)
-	$(COMP90) -o therieq3 therieq3.o $(OBJECTS)
+$(BUILD_DIR)/therter.o : therter.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c therter.$(SEX) -o $@
 
-makemap.o : makemap.$(SEX) files.cmn map.cmn
-	$(COMP90) -c makemap.$(SEX)
+$(BIN_DIR)/therter : $(BUILD_DIR)/therter.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/therter.o $(OBJECTS)
 
-makemap : makemap.o hprogs.o help.o $(PLAT).o
-	$(COMP90) -o makemap makemap.o hprogs.o help.o $(PLAT).o
+$(BUILD_DIR)/thermo.o : thermo.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c thermo.$(SEX) -o $@
 
-theriag.o : theriag.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c theriag.$(SEX)
+$(BIN_DIR)/thermo : $(BUILD_DIR)/thermo.o $(THERMO_OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/thermo.o $(THERMO_OBJECTS)
 
-theriag : theriag.o $(OBJECTS)
-	$(COMP90) -o theriag theriag.o $(OBJECTS)
+$(BUILD_DIR)/thalia.o : thalia.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c thalia.$(SEX) -o $@
 
-reafit.o : reafit.$(SEX) theriak.cmn files.cmn fitpar.cmn thfit.cmn
-	$(COMP90) -c reafit.$(SEX)
+$(BIN_DIR)/thalia : $(BUILD_DIR)/thalia.o $(THERMO_OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/thalia.o $(THERMO_OBJECTS)
 
-reafit : reafit.o $(OBJECTS)
-	$(COMP90) -o reafit reafit.o $(OBJECTS)
+$(BUILD_DIR)/theriaq.o : theriaq.$(SEX) theriak.cmn files.cmn aqua.cmn
+	$(COMP90) -c theriaq.$(SEX) -o $@
 
-vercheck : vercheck.$(SEX)
-	$(COMP90) -o vercheck vercheck.$(SEX)
+$(BIN_DIR)/theriaq : $(BUILD_DIR)/theriaq.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/theriaq.o $(OBJECTS)
 
-sublist : sublist.$(SEX)
-	$(COMP90) -o sublist sublist.$(SEX)
+$(BUILD_DIR)/therieq3.o : therieq3.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c therieq3.$(SEX) -o $@
 
-lincount : lincount.$(SEX)
-	$(COMP90) -o lincount lincount.$(SEX)
+$(BIN_DIR)/therieq3 : $(BUILD_DIR)/therieq3.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/therieq3.o $(OBJECTS)
 
-plotxy.o : plotxy.$(SEX) files.cmn
-	$(COMP90) -c plotxy.$(SEX)
+$(BUILD_DIR)/makemap.o : makemap.$(SEX) files.cmn map.cmn
+	$(COMP90) -c makemap.$(SEX) -o $@ 
 
-plotxy : plotxy.o hprogs.o help.o $(PLAT).o
-	$(COMP90) -o plotxy plotxy.o hprogs.o help.o $(PLAT).o
+$(BIN_DIR)/makemap : $(BUILD_DIR)/makemap.o $(BUILD_DIR)/hprogs.o $(BUILD_DIR)/help.o $(BUILD_DIR)/$(PLAT).o
+	$(COMP90) -o $@ $(BUILD_DIR)/makemap.o $(BUILD_DIR)/hprogs.o $(BUILD_DIR)/help.o $(BUILD_DIR)/$(PLAT).o
 
-plotg.o : plotg.$(SEX) files.cmn
-	$(COMP90) -c plotg.$(SEX)
+$(BUILD_DIR)/theriag.o : theriag.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c theriag.$(SEX) -o $@
 
-plotg : plotg.o hprogs.o help.o $(PLAT).o
-	$(COMP90) -o plotg plotg.o hprogs.o help.o $(PLAT).o
+$(BIN_DIR)/theriag : $(BUILD_DIR)/theriag.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/theriag.o $(OBJECTS)
 
-intri : intri.$(SEX)
-	$(COMP90) -o intri intri.$(SEX)
+$(BUILD_DIR)/reafit.o : reafit.$(SEX) theriak.cmn files.cmn fitpar.cmn thfit.cmn
+	$(COMP90) -c reafit.$(SEX) -o $@
 
-therisub.o : therisub.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c therisub.$(SEX)
+$(BIN_DIR)/reafit : $(BUILD_DIR)/reafit.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/reafit.o $(OBJECTS)
 
-subtest.o : subtest.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c subtest.$(SEX)
+$(BIN_DIR)/vercheck : vercheck.$(SEX)
+	$(COMP90) -o $@ vercheck.$(SEX)
 
-subtest : subtest.o therisub.o $(OBJECTS)
-	$(COMP90) -o subtest subtest.o therisub.o $(OBJECTS)
+$(BIN_DIR)/sublist : sublist.$(SEX)
+	$(COMP90) -o $@ sublist.$(SEX)
 
-therion.o : therion.$(SEX) theriak.cmn files.cmn checkdb.cmn
-	$(COMP90) -c therion.$(SEX)
+$(BIN_DIR)/lincount : lincount.$(SEX)
+	$(COMP90) -o $(BIN_DIR)/lincount lincount.$(SEX)
 
-therion : therion.o $(OBJECTS)
-	$(COMP90) -o therion therion.o $(OBJECTS)
+$(BUILD_DIR)/plotxy.o : plotxy.$(SEX) files.cmn
+	$(COMP90) -c plotxy.$(SEX) -o $@
 
-jphases.o : jphases.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c jphases.$(SEX)
+$(BIN_DIR)/plotxy : $(BUILD_DIR)/plotxy.o $(BUILD_DIR)/hprogs.o $(BUILD_DIR)/help.o $(BUILD_DIR)/$(PLAT).o
+	$(COMP90) -o $@ $(BUILD_DIR)/plotxy.o $(BUILD_DIR)/hprogs.o $(BUILD_DIR)/help.o $(BUILD_DIR)/$(PLAT).o
 
-jphases : jphases.o $(OBJECTS)
-	$(COMP90) -o jphases jphases.o $(OBJECTS)
+$(BUILD_DIR)/plotg.o : plotg.$(SEX) files.cmn
+	$(COMP90) -c plotg.$(SEX) -o $@
 
-jfiles.o : jfiles.$(SEX) theriak.cmn files.cmn
-	$(COMP90) -c jfiles.$(SEX)
+$(BIN_DIR)/plotg : $(BUILD_DIR)/plotg.o $(BUILD_DIR)/hprogs.o $(BUILD_DIR)/help.o $(BUILD_DIR)/$(PLAT).o
+	$(COMP90) -o $@ $(BUILD_DIR)/plotg.o $(BUILD_DIR)/hprogs.o $(BUILD_DIR)/help.o $(BUILD_DIR)/$(PLAT).o
 
-jfiles : jfiles.o $(OBJECTS)
-	$(COMP90) -o jfiles jfiles.o $(OBJECTS)
+$(BIN_DIR)/intri : $(BIN_DIR)/intri.$(SEX)
+	$(COMP90) -o $@ intri.$(SEX)
 
-cat2.o : cat2.$(SEX)
-	$(COMP90) -c cat2.$(SEX)
+$(BUILD_DIR)/therisub.o : therisub.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c therisub.$(SEX) -o $@
 
-cat2 : cat2.o hprogs.o $(PLAT).o
-	$(COMP90) -o cat2 cat2.o hprogs.o $(PLAT).o
+$(BUILD_DIR)/subtest.o : subtest.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c subtest.$(SEX) -o $@
 
-pretherion.o : pretherion.$(SEX)
-	$(COMP90) -c pretherion.$(SEX)
+$(BIN_DIR)/subtest : $(BUILD_DIR)/subtest.o $(BUILD_DIR)/therisub.o $(OBJECTS)
+	$(COMP90) -o $@  $(BUILD_DIR)/subtest.o $(BUILD_DIR)/therisub.o $(OBJECTS)
 
-pretherion : pretherion.o $(PLAT).o
-	$(COMP90) -o pretherion pretherion.o $(PLAT).o
+$(BUILD_DIR)/therion.o : therion.$(SEX) theriak.cmn files.cmn checkdb.cmn
+	$(COMP90) -c therion.$(SEX) -o $@
 
-all : theriak domino guzzler explot therbin therter thermo thalia makemap theriag plotxy plotg jfiles jphases\
- cat2 theriakd therion pretherion
+$(BIN_DIR)/therion : $(BUILD_DIR)/therion.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/therion.o $(OBJECTS)
+
+$(BUILD_DIR)/jphases.o : jphases.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c jphases.$(SEX) -o $@
+
+$(BIN_DIR)/jphases : $(BUILD_DIR)/jphases.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/jphases.o $(OBJECTS)
+
+$(BUILD_DIR)/jfiles.o : jfiles.$(SEX) theriak.cmn files.cmn
+	$(COMP90) -c jfiles.$(SEX) -o $@
+
+$(BIN_DIR)/jfiles : $(BUILD_DIR)/jfiles.o $(OBJECTS)
+	$(COMP90) -o $@ $(BUILD_DIR)/jfiles.o $(OBJECTS)
+
+$(BUILD_DIR)/cat2.o : cat2.$(SEX)
+	$(COMP90) -c cat2.$(SEX) -o $@
+
+$(BIN_DIR)/cat2 : $(BUILD_DIR)/cat2.o $(BUILD_DIR)/hprogs.o $(BUILD_DIR)/$(PLAT).o
+	$(COMP90) -o $@ $(BUILD_DIR)/cat2.o $(BUILD_DIR)/hprogs.o $(BUILD_DIR)/$(PLAT).o
+
+$(BUILD_DIR)/pretherion.o : pretherion.$(SEX)
+	$(COMP90) -c pretherion.$(SEX) -o $@
+
+$(BIN_DIR)/pretherion : $(BUILD_DIR)/pretherion.o $(BUILD_DIR)/$(PLAT).o
+	$(COMP90) -o $@ $(BUILD_DIR)/pretherion.o $(BUILD_DIR)/$(PLAT).o
+
+all : \
+$(BIN_DIR)/theriak \
+$(BIN_DIR)/domino \
+$(BIN_DIR)/guzzler \
+$(BIN_DIR)/explot \
+$(BIN_DIR)/therbin \
+$(BIN_DIR)/therter \
+$(BIN_DIR)/thermo \
+$(BIN_DIR)/thalia \
+$(BIN_DIR)/makemap \
+$(BIN_DIR)/theriag \
+$(BIN_DIR)/plotxy \
+$(BIN_DIR)/plotg \
+$(BIN_DIR)/jfiles \
+$(BIN_DIR)/jphases \
+$(BIN_DIR)/cat2 \
+$(BIN_DIR)/theriakd \
+$(BIN_DIR)/therion \
+$(BIN_DIR)/pretherion
+
+clean:
+	rm -f ../bin/* ; \
+	rm -f ../default-build/*.o
 
